# advent-of-code-2025

./: .clang-format  CMakeLists.txt  README.md
include/aoc/: circular_dial.hpp
include/aoc/utils/: inputs.hpp  ranges.hpp  strings.hpp
src/: day1.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp
